feat: 获取用户信息接口桥接Done
